feat: models complete

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
 	"name": "Blood Money Ballers",
 	"description": "A collection of upgraded silverballers.",
 	"authors": ["Charc0al"],
-	"frameworkVersion": "2.33.27",
+	"frameworkVersion": "2.33.26",
 	"options": [
 		{
 			"name": "Ballers",
@@ -14,7 +14,14 @@
 			"group": "Other",
 			"type": "checkbox",
 			"enabledByDefault": true,
-			"contentFolders": ["content/ballers"],
+			"contentFolders": ["content/ballers"]
+		},
+		{
+			"name": "Localization",
+			"tooltip": "Localizations",
+			"group": "Other",
+			"type": "checkbox",
+			"enabledByDefault": true,
 			"localisation": {
 				"english": {
 					"FIREARMS_HERO_WALLBANGER_NAME": "The Wallbanger",
