--- a/manifest.json
+++ b/manifest.json
@@ -9,25 +9,83 @@
 	"frameworkVersion": "2.33.27",
 	"options": [
 		{
-			"name": "Ballers",
-			"tooltip": "Add bonus unlockables to the planning screen. Propane flask, frying pan, sniper case, among others.",
+			"name": "Replacement Ballers - ALL",
+			"tooltip": "All replacement ballers. Faster to deploy if you want everything. The same as checking all the other options individually.",
 			"group": "Other",
 			"type": "checkbox",
 			"enabledByDefault": true,
 			"contentFolders": ["content/ballers"]
 		},
 		{
-			"name": "Localization",
-			"tooltip": "Localizations",
+			"name": "Unlock Ballers - ALL",
+			"tooltip": "Adds the 1911 Charcoal and the Wallbanger as new unlocks at the loadout screen.",
 			"group": "Other",
 			"type": "checkbox",
 			"enabledByDefault": true,
+			"contentFolders": ["content/unlocks"],
+			"image": "smf/unlocks.webp",
 			"localisation": {
 				"english": {
 					"FIREARMS_HERO_WALLBANGER_NAME": "The Wallbanger",
 					"FIREARMS_HERO_PISTOL_ICA19_BLACKLILLY3_NAME": "1911 Charcoal"
 				}
 			}
+		},
+		{
+			"name": "Replace | Silverballer MK2",
+			"tooltip": "Replaces MK2 baller with Blood Money upgraded baller",
+			"group": "Other",
+			"type": "checkbox",
+			"image": "smf/mk2.webp",
+			"contentFolders": ["content/mk2"]
+		},
+		{
+			"name": "Replace | GOLD Baller (Freelancer)",
+			"tooltip": "Replaces ugly goldballer with a VERY gold baller :)",
+			"group": "Other",
+			"type": "checkbox",
+			"image": "smf/gold.webp",
+			"contentFolders": ["content/gold"]
+		},
+		{
+			"name": "Replace | Black Lily",
+			"tooltip": "Gives the black lily a more unique look",
+			"group": "Other",
+			"type": "checkbox",
+			"image": "smf/lily.webp",
+			"contentFolders": ["content/lily"]
+		},
+		{
+			"name": "Replace | Purple Baller",
+			"tooltip": "Replaces the purple Twich baller with the 1911 Blueballer",
+			"group": "Other",
+			"type": "checkbox",
+			"image": "smf/purple.webp",
+			"contentFolders": ["content/purple"]
+		},
+		{
+			"name": "Replace | Trinity Black",
+			"tooltip": "Gives the Trinity Black baller a more unique look",
+			"group": "Other",
+			"type": "checkbox",
+			"image": "smf/black.webp",
+			"contentFolders": ["content/trinityblack"]
+		},
+		{
+			"name": "Replace | Trinity Red",
+			"tooltip": "Gives the Trinity Red baller a more unique look",
+			"group": "Other",
+			"type": "checkbox",
+			"image": "smf/red.webp",
+			"contentFolders": ["content/trinityred"]
+		},
+		{
+			"name": "Replace | Trinity White",
+			"tooltip": "Gives the Trinity White baller a more unique look",
+			"group": "Other",
+			"type": "checkbox",
+			"image": "smf/white.webp",
+			"contentFolders": ["content/trinitywhite"]
 		},
 		{
 			"name": "Disable Online Resources",
