feat: Add HWK21 Mk2 replacement, P99 Tactical with extended mag, 22 rounds

--- a/manifest.json
+++ b/manifest.json
@@ -98,7 +98,7 @@
 			"localisationOverrides": {
 				"0072D1A320470342": {
 					"english": {
-						"2755084931": "Walther P99 Tactical",
+						"2755084931": "Walther P99 Tactical"
 					}
 				}
 			}
